graphics_src_files += files(
    'bag.cpp',
    'bag.hpp',
    'command_line_arguments.cpp',
    'command_line_arguments.hpp',
    'game.cpp',
    'game.hpp',
    'graphic_helpers.cpp',
    'graphic_helpers.hpp',
    'grid.cpp',
    'grid.hpp',
    'layout.cpp',
    'layout.hpp',

    'rotation.cpp',
    'rotation.hpp',
    'simulated_tetrion.cpp',
    'simulated_tetrion.hpp',
    'simulation.cpp',
    'simulation.hpp',
    'tetrion.cpp',
    'tetrion.hpp',
    'tetromino.cpp',
    'tetromino.hpp',
)
