graphics_src_files += files(
    'console_buttons.hpp',
    'game_input.cpp',
    'game_input.hpp',
    'guid.cpp',
    'guid.hpp',
    'input.cpp',
    'input.hpp',
    'input_creator.cpp',
    'input_creator.hpp',
    'joystick_input.cpp',
    'joystick_input.hpp',
    'keyboard_input.cpp',
    'keyboard_input.hpp',
    'mouse_input.cpp',
    'mouse_input.hpp',
    'replay_input.cpp',
    'replay_input.hpp',
    'touch_input.cpp',
    'touch_input.hpp',
)
