src_files += files(
    'controls.hpp',
    'event_dispatcher.hpp',
    'event_listener.hpp',
    'font.cpp',
    'font.hpp',
    'input_event.hpp',
    'key_codes.hpp',
    'music_manager.cpp',
    'music_manager.hpp',
    'recording.hpp',
    'resource_manager.hpp',
    'service_provider.hpp',
    'settings.hpp',
)
