graphics_src_files += files(
    'event_dispatcher.hpp',
    'event_listener.hpp',
    'font.cpp',
    'font.hpp',
    'music_manager.cpp',
    'music_manager.hpp',
    'sdl_controller_key.cpp',
    'sdl_controller_key.hpp',
    'sdl_key.cpp',
    'sdl_key.hpp',
    'settings_manager.cpp',
    'settings_manager.hpp',
)
