src_files += files('scene.cpp', 'scene.hpp', 'scene_id.hpp')

subdir('about_page')
subdir('game_over')
subdir('main_menu')
subdir('multiplayer_menu')
subdir('pause')
subdir('play_select_menu')
subdir('settings_menu')
subdir('single_player_game')

if online_multiplayer_not_supported
    subdir('online_lobby')
endif
