graphics_src_files += files('scene.cpp', 'scene.hpp', 'scene_id.hpp')

subdir('about_page')
subdir('loading_screen')
subdir('logo')
subdir('main_menu')
subdir('multiplayer_local_ai')
subdir('multiplayer_menu')
subdir('online_lobby')
subdir('play_select_menu')
subdir('recording_selector')
subdir('replay_game')
subdir('settings_menu')
subdir('single_player_game')
